--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "START_DATE='2024-05-24T20:12:17.629Z' END_DATE='2024-05-24T20:16:45.000Z' node index.js",
     "playlist": "node create-playlist.js"
   },
   "author": "",
